test/compilable/dtoh_unittest_block.d
/*
REQUIRED_ARGS: -HC -c -o-
PERMUTE_ARGS:
TEST_OUTPUT:
---
// Automatically generated by Digital Mars D Compiler v$n$

#pragma once

#include <assert.h>
#include <stddef.h>
#include <stdint.h>
#include <stdio.h>
#include <string.h>

#if !defined(_d_real)
# define _d_real long double
#endif


// Parsing module dtoh_unittest_block
---
*/

unittest
{
    extern (C++) int foo(int x)
    {
        return x * 42;
    }
}
